# search-engine

./: CMakeLists.txt
include/: bm25.h  inverted_index.h
src/: bm25.cpp  inverted_index.cpp  main.cpp
